--- a/templates/acapy-secret.yaml
+++ b/templates/acapy-secret.yaml
@@ -2,15 +2,15 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "acapy.fullname" . }}
+  name: {{ template "acapy.fullname" . }}-acapy
   labels:
     {{- include "acapy.labels" . | nindent 4 }}
   namespace: {{ .Release.Namespace }}
 stringData:
-  {{- if .Values.acapy.admin.apiKey.enabled }}
-  ACAPY_ADMIN_URL_API_KEY: {{ .Values.acapy.admin.apiKey.adminURLApiKey | quote }}
+  {{- if .Values.admin.apiKey.enabled }}
+  ACAPY_ADMIN_URL_API_KEY: {{ .Values.admin.apiKey.adminURLApiKey | quote }}
   {{- end }}
-  ACAPY_AGENT_SEED: {{ required "acapy.agentSeed is required" .Values.acapy.agentSeed | quote }}
-  ACAPY_WALLET_KEY: {{ required "acapy.walletKey is required" .Values.acapy.walletKey | quote }}
+  ACAPY_AGENT_SEED: {{ .Values.agentSeed | quote }}
+  ACAPY_WALLET_KEY: {{ .Values.walletKey | quote }}
 type: Opaque
 {{- end -}}
