--- a/templates/db-secret.yaml
+++ b/templates/db-secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "global.postgresql.fullname" . }}
+  name: {{ template "acapy.fullname" . }}-db
   labels:
     app: {{ template "global.name" . }}
     chart: {{ template "global.chart" . }}
@@ -10,6 +10,6 @@ metadata:
     release: {{ .Release.Name }}
 type: Opaque
 stringData:
-  postgresql-password: {{ .Values.postgresql.postgresqlPassword | quote }}
-  postgresql-username: {{ .Values.postgresql.postgresqlUsername | quote }}
+  postgresql-password: {{ .Values.db.password | quote }}
+  postgresql-username: {{ .Values.db.username | quote }}
 {{- end -}}
