--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -1,9 +1,9 @@
-{{- if .Values.acapy.ingress.enabled -}}
+{{- if .Values.ingress.enabled -}}
 {{- $fullName := include "acapy.fullname" . -}}
-{{- $svcPort := .Values.acapy.service.httpPort -}}
-{{- if and .Values.acapy.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
-  {{- if not (hasKey .Values.acapy.ingress.annotations "kubernetes.io/ingress.class") }}
-  {{- $_ := set .Values.acapy.ingress.annotations "kubernetes.io/ingress.class" .Values.acapy.ingress.className}}
+{{- $svcPort := .Values.service.httpPort -}}
+{{- if and .Values.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
+  {{- if not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class") }}
+  {{- $_ := set .Values.ingress.annotations "kubernetes.io/ingress.class" .Values.ingress.className}}
   {{- end }}
 {{- end }}
 {{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
@@ -18,17 +18,17 @@ metadata:
   name: {{ $fullName }}
   labels:
     {{- include "acapy.labels" . | nindent 4 }}
-  {{- with .Values.acapy.ingress.annotations }}
+  {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  {{- if and .Values.acapy.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
-  ingressClassName: {{ .Values.acapy.ingress.className }}
+  {{- if and .Values.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
+  ingressClassName: {{ .Values.ingress.className }}
   {{- end }}
-  {{- if .Values.acapy.ingress.tls }}
+  {{- if .Values.ingress.tls }}
   tls:
-    {{- range .Values.acapy.ingress.tls }}
+    {{- range .Values.ingress.tls }}
     - hosts:
         {{- range .hosts }}
         - {{ . | quote }}
@@ -37,8 +37,8 @@ spec:
     {{- end }}
   {{- end }}
   rules:
-{{- if .Values.acapy.ingress.hosts -}}
-    {{- range .Values.acapy.ingress.hosts }}
+{{- if .Values.ingress.hosts -}}
+    {{- range .Values.ingress.hosts }}
     - host: {{ .host | quote }}
       http:
         paths:
